fix: menubar hamburger icon is now on right side of screen when on mobile instead of center

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,20 @@
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
+@import 'primeflex/core/_variables.scss';
+
+@media screen and (max-width: 960px) {
+    .p-menubar {
+        .p-menubar-end {
+            display: none;
+        }
+
+        .p-menubar-button {
+            position: absolute;
+            right: 32px;
+        }
+    }
+}
 
 body {
     min-height: 100vh;
